--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node Server.js"
     },
-    "author": "",
-    "license": "ISC",
+    "author": "chenp6",
+    "license": "MIT",
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
